--- a/命令.md
+++ b/命令.md
@@ -21,6 +21,10 @@ conda
 conda info --envs
 conda create -n your_env_name python=X.X
 conda remove -n your_env_name(虚拟环境名称) --all
+conda config --remove-key channels(换回默认源)
+conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
+conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
+conda config --set show_channel_urls yes(换清华源)
 ```
 
 docker
