--- a/命令.md
+++ b/命令.md
@@ -8,6 +8,14 @@ tar -zxvf ...tar.gz
 
 ```
 
+nginx
+```
+service nginx start
+service nginx restart
+systemctl stop firewalld.service
+systemctl disable firewalld.service  #开机关闭
+```
+
 npm
 ```
 npm list -g --depth=0
@@ -80,4 +88,126 @@ cmake -D WITH_TBB=ON \
 -D BUILD_LIBPROTOBUF_FROM_SOURCES=ON \
 -D BUILD_opencv_hdf=OFF \
 ..
+```
+
+md语法高亮的语言
+```
+AppleScript
+applescript
+
+
+ActionScript 3.0
+actionscript3, as3
+
+
+Shell
+bash, shell
+
+
+ColdFusion
+coldfusion, cf
+
+
+C
+cpp, c
+
+
+C#
+c#, c-sharp, csharp
+
+
+CSS
+css
+
+
+Delphi
+delphi, pascal, pas
+
+
+diff&patch
+diff patch
+
+
+Erlang
+erl, erlang
+
+
+Groovy
+groovy
+
+
+Java
+java
+
+
+JavaFX
+jfx, javafx
+
+
+JavaScript
+js, jscript, javascript
+
+
+Perl
+perl, pl, Perl
+
+
+PHP
+php
+
+
+text
+text, plain
+
+
+Python
+py, python
+
+
+Ruby
+ruby, rails, ror, rb
+
+
+SASS&SCSS
+sass, scss
+
+
+Scala
+scala
+
+
+SQL
+sql
+
+
+Visual Basic
+vb, vbnet
+
+
+XML
+xml, xhtml, xslt, html
+
+
+Objective C
+objc, obj-c
+
+
+F#
+f#, f-sharp, fsharp
+
+
+R
+r, s, splus
+
+
+matlab
+matlab
+
+
+swift
+swift
+
+
+GO
+go, golang
 ```
