--- a/命令.md
+++ b/命令.md
@@ -1,5 +1,5 @@
 Linux
-```
+```shell
 查看wget的进程：ps -aux | grep wget
 杀死进程：kill pid
 wget -c 
@@ -9,7 +9,7 @@ tar -zxvf ...tar.gz
 ```
 
 nginx
-```
+```shell
 service nginx start
 service nginx restart
 systemctl stop firewalld.service
@@ -17,7 +17,7 @@ systemctl disable firewalld.service  #开机关闭
 ```
 
 npm
-```
+```shell
 npm list -g --depth=0
 npm install 
 yarn add
@@ -25,7 +25,7 @@ yarn start
 ```
 
 conda
-```
+```shell
 conda info --envs
 conda create -n your_env_name python=X.X
 conda remove -n your_env_name(虚拟环境名称) --all
@@ -36,7 +36,7 @@ conda config --set show_channel_urls yes(换清华源)
 ```
 
 docker
-```
+```shell
 docker pull
 docker run ...
 docker stop
@@ -49,7 +49,7 @@ docker exec -it  name... /bin/bash
 ```
 
 Git
-```
+```shell
 git clone https://github.com/CloserWU/Interstellar_Document.git
 //git init
 git add .
@@ -60,7 +60,7 @@ git push -u origin master
 ```
 
 opencv
-```
+```shell
 cmake -D WITH_TBB=ON \
 -D BUILD_NEW_PYTHON_SUPPORT=ON \
 -D CMAKE_INSTALL_PREFIX=/home/wushuai/opencv \
@@ -91,7 +91,7 @@ cmake -D WITH_TBB=ON \
 ```
 
 md语法高亮的语言
-```
+```shell
 AppleScript
 applescript
 
