--- a/命令.md
+++ b/命令.md
@@ -12,6 +12,10 @@ nginx
 ```shell
 service nginx start
 service nginx restart
+/usr/sbin/nginx -s reload 重启
+/usr/sbin/nginx -t 测试配置文件是否正常
+systemctl start nginx.service
+systemctl enable nginx.service
 systemctl stop firewalld.service
 systemctl disable firewalld.service  #开机关闭
 ```
