--- a/命令.md
+++ b/命令.md
@@ -10,6 +10,9 @@ tar -zxvf ...tar.gz
 
 nginx
 ```shell
+rpm -ivh http://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm
+yum install nginx
+
 service nginx start
 service nginx restart
 /usr/sbin/nginx -s reload 重启
@@ -20,8 +23,21 @@ systemctl stop firewalld.service
 systemctl disable firewalld.service  #开机关闭
 ```
 
+tomcat
+```shell
+wget http://apache.website-solution.net/tomcat/tomcat-8/v8.5.37/bin/apache-tomcat-8.5.37.tar.gz
+
+
+/usr/local/tomcat/tomcat/bin/startup.sh
+/usr/local/tomcat/tomcat/bin/startup.sh
+```
+
 npm
 ```shell
+yum install epel-release
+yum install nodejs
+
+
 npm list -g --depth=0
 npm install 
 yarn add
@@ -54,6 +70,8 @@ docker exec -it  name... /bin/bash
 
 Git
 ```shell
+yum install -y git
+
 git clone https://github.com/CloserWU/Interstellar_Document.git
 //git init
 git add .
