--- a/命令.md
+++ b/命令.md
@@ -28,8 +28,8 @@ tomcat
 wget http://apache.website-solution.net/tomcat/tomcat-8/v8.5.37/bin/apache-tomcat-8.5.37.tar.gz
 
 
-/usr/local/tomcat/tomcat/bin/startup.sh
-/usr/local/tomcat/tomcat/bin/startup.sh
+/usr/local/tomcat/tomcat/bin/startup.sh  开启服务
+/usr/local/tomcat/tomcat/bin/startup.sh  关闭服务
 ```
 
 npm
@@ -37,6 +37,14 @@ npm
 yum install epel-release
 yum install nodejs
 
+更新node
+npm install -g n
+n latest
+更新npm
+npm -g install npm@next
+
+删除npm
+yum remove nodejs npm -y
 
 npm list -g --depth=0
 npm install 
