--- a/命令.md
+++ b/命令.md
@@ -6,6 +6,11 @@ wget -c
 
 tar -zxvf ...tar.gz
 
+netstat -ntlp | grep 80 查看端口占用情况
+
+ps -ef | grep npm  查看端口或服务对应进程
+ps -ef | grep node
+
 ```
 
 nginx
