--- a/命令.md
+++ b/命令.md
@@ -11,6 +11,8 @@ netstat -ntlp | grep 80 查看端口占用情况
 ps -ef | grep npm  查看端口或服务对应进程
 ps -ef | grep node
 
+
+cp -r dir1/ dir2/
 ```
 
 nginx
@@ -55,6 +57,8 @@ npm list -g --depth=0
 npm install 
 yarn add
 yarn start
+
+nohup npm start &
 ```
 
 conda
