--- a/命令.md
+++ b/命令.md
@@ -39,6 +39,12 @@ wget http://apache.website-solution.net/tomcat/tomcat-8/v8.5.37/bin/apache-tomca
 /usr/local/tomcat/tomcat/bin/startup.sh  关闭服务
 ```
 
+VS
+```shell
+1)注释：组合键“Ctrl+K+C”;
+2)取消注释：组合键“Ctrl+K+U”
+```
+
 npm
 ```shell
 yum install epel-release
