--- a/命令.md
+++ b/命令.md
@@ -6,6 +6,9 @@ wget -c
 
 tar -zxvf ...tar.gz
 
+查看操作系统版本
+cat /etc/os-release
+
 netstat -ntlp | grep 80 查看端口占用情况
 
 ps -ef | grep npm  查看端口或服务对应进程
