--- a/安装方法大全.md
+++ b/安装方法大全.md
@@ -19,18 +19,18 @@ systemctl disable firewalld.service  #开机关闭
 下载Linux版本jdk，8u181
 mkdir /usr/local/java/
 
-tar -zxvf jdk-8u171-linux-x64.tar.gz -C /usr/local/java/
+tar -zxvf jdk-8u181-linux-x64.tar.gz -C /usr/local/java/
 
 vim /etc/profile
 
-export JAVA_HOME=/usr/local/java/jdk1.8.0_171
+export JAVA_HOME=/usr/local/java/jdk1.8.0_181
 export JRE_HOME=${JAVA_HOME}/jre
 export CLASSPATH=.:${JAVA_HOME}/lib:${JRE_HOME}/lib
 export PATH=${JAVA_HOME}/bin:$PATH
 
 source /etc/profile
 
-ln -s /usr/local/java/jdk1.8.0_171/bin/java /usr/bin/java
+ln -s /usr/local/java/jdk1.8.0_181/bin/java /usr/bin/java
 
 java -version
 ```
@@ -108,3 +108,18 @@ ALTER USER 'root'@'localhost' IDENTIFIED BY 'yourpassword';
 use mysql;
 update user set host='%' where user='root';
 ```
+
+## Centos 安装Docker
+
+```shell
+yum update  # 这个命令不要轻易使用！！！！
+yum remove docker  docker-common docker-selinux docker-engine
+yum install -y yum-utils device-mapper-persistent-data lvm2
+yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+yum list docker-ce --showduplicates | sort -r
+yum install docker-ce
+systemctl start docker
+systemctl enable docker
+docker version
+```
+
