--- a/命令.md
+++ b/命令.md
@@ -92,6 +92,8 @@ docker ps -a
 docker rmi
 docker rm
 docker exec -it  name... /bin/bash
+
+docker rm -f $(docker ps -a |  grep "192*"  | awk '{print $1}')
 ```
 
 Git
