--- a/命令.md
+++ b/命令.md
@@ -91,9 +91,24 @@ docker ps
 docker ps -a
 docker rmi
 docker rm
-docker exec -it  name... /bin/bash
+docker exec -it  name... bash
 
 docker rm -f $(docker ps -a |  grep "192*"  | awk '{print $1}')
+docker images -q //列出镜像的id
+docker image rm $(docker image ls -q redis)
+docker image rm $(docker image ls -q -f before=mongo:3.2)
+docker run -d -p 5000:5000 --restart=always --name registry registry
+docker run --name webserver -d -p 80:80 nginx
+docker container start
+docker container logs [container ID or NAMES]
+docker container stop
+docker export 7691a814370e(conrainer ID) > ubuntu.tar
+cat ubuntu.tar | docker import - test/ubuntu:v1.0
+docker import http://example.com/exampleimage.tgz example/imagerepo  (导入镜像)
+docker container prune //清理所有处于终止状态的容器
+docker image prune // 清除悬虚镜像
+docker ps -l // 上一次运行的容器
+docker ps -n 3 // 上3次运行的容器
 ```
 
 Git
