--- a/安装方法大全.md
+++ b/安装方法大全.md
@@ -38,7 +38,7 @@ java -version
 ## Centos安装tomcat
 [Linux(Centos)之安装tomcat并且部署Java Web项目](http://www.cnblogs.com/hanyinglong/p/5024643.html)  
 ```shell
-wget http://ftp.cuhk.edu.hk/pub/packages/apache.org/tomcat/tomcat-8/v8.5.38/bin/apache-tomcat-8.5.38.tar.gz
+wget http://apache.website-solution.net/tomcat/tomcat-8/v8.5.51/bin/apache-tomcat-8.5.51.tar.gz
 
 tar -zxv -f apache-tomcat-8.0.29.tar.gz
 mv apache-tomcat-8.0.29 tomcat
@@ -112,14 +112,36 @@ update user set host='%' where user='root';
 ## Centos 安装Docker
 
 ```shell
+// centos 7
 yum update  # 这个命令不要轻易使用！！！！
 yum remove docker  docker-common docker-selinux docker-engine
 yum install -y yum-utils device-mapper-persistent-data lvm2
 yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 yum list docker-ce --showduplicates | sort -r
 yum install docker-ce
+vim /etc/docker/daemon.json
+>>>
+{
+  "registry-mirrors": ["https://yyxe9ksf.mirror.aliyuncs.com"]
+}
+<<<
 systemctl start docker
+systemctl restart docker
 systemctl enable docker
+docker version
+curl -L https://github.com/docker/compose/releases/download/1.25.4/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+chmod +x /usr/local/bin/docker-compose
+```
+
+```shell
+// centos 6.8
+yum install -y epel-release
+yum intsall -y docker-io
+//(docker-io 适用于ubuntu dockers-ce适用于centos)
+//https://stackoverflow.com/questions/45023363/what-is-docker-io-in-relation-to-docker-ce-and-docker-ee
+vim /etc/sysconfig/docker
+service start docker
+service enable docker
 docker version
 ```
 
