--- a/命令.md
+++ b/命令.md
@@ -91,27 +91,115 @@ docker ps
 docker ps -a
 docker rmi
 docker rm
-docker exec -it  name... bash
+docker exec -it [container id] bash
+docker exec -it [container id] ls -l /  // 没有交互终端，直接返回命令结果
 
 docker rm -f $(docker ps -a |  grep "192*"  | awk '{print $1}')
 docker images -q //列出镜像的id
 docker image rm $(docker image ls -q redis)
 docker image rm $(docker image ls -q -f before=mongo:3.2)
+
+docker rm -f $(docker ps -a -q)
 docker run -d -p 5000:5000 --restart=always --name registry registry
 docker run --name webserver -d -p 80:80 nginx
+
 docker container start
 docker container logs [container ID or NAMES]
 docker container stop
+
 docker export 7691a814370e(conrainer ID) > ubuntu.tar
 cat ubuntu.tar | docker import - test/ubuntu:v1.0
 docker import http://example.com/exampleimage.tgz example/imagerepo  (导入镜像)
+
 docker container prune //清理所有处于终止状态的容器
 docker image prune // 清除悬虚镜像
 docker ps -l // 上一次运行的容器
 docker ps -n 3 // 上3次运行的容器
+
+docker logs -f -t [container id] // -t 带时间戳
+docker history [image id]
+docker top [container id] // 查看容器中的进程
+docker inspect [container id] // 查看容器信息 json格式
+docker cp [container id]:/tmp/yum.log //将容器内部 /tmp/yum.log文件复制到宿主级当前目录
+
+// 慎用commit 会导致镜像臃肿
+docker commit -a="wushuai" -m="first commit" registry[container id/name]  wushuai/registry:v2[images name]  // 提交修改的镜像， 添加作者和描述信息 并打上新的镜像标签
+docker commit \
+    --author "Tao Wang <twang2218@gmail.com>" \
+    --message "修改了默认网页" \
+    webserver \
+    nginx:v2
+docker tag hello-world 127.0.0.1:5000/hello-world:v2
+docker push 127.0.0.1:5000/hello-world:v2
+
+docker run -it -v /宿主机绝对路径:/容器内路径(:ro) [image id/name]  // 挂载一个主机目录作为数据卷  :ro为只读 将不能在容器/opt/webapp目录下添加文件
+docker run -d -P \
+    --name web \
+    # -v /src/webapp:/opt/webapp:ro \
+    --mount type=bind,source=/src/webapp,target=/opt/webapp,readonly \
+    training/webapp \
+    python app.py
+    
+// --mount 标记也可以从主机挂载单个文件到容器    这样就可以记录在容器输入过的命令了。
+docker run --rm -it \
+   # -v $HOME/.bash_history:/root/.bash_history \
+   --mount type=bind,source=$HOME/.bash_history,target=/root/.bash_history \
+   ubuntu:17.10 \
+   bash
+docker volume create my-vol
+docker volume inspect my-vol // 数据卷信息
+docker run -d -P \
+    --name web \
+    # -v my-vol:/wepapp \
+    --mount source=my-vol,target=/webapp \  // 将数据卷my-vol 挂载到容器的 /webapp 目录
+    training/webapp \
+    python app.py
+docker volume rm my-vol
+docker volume prune // 清理无主的数据卷
+docker run -it --name xxx02[con id] --volume-from xxx01[con id] [image id] // 数据卷继承，可共同修改，容器间平等
+
+docker build -f /path/to/Dockerfile2(或默认当前目录下Dockerfile文件) -t 新镜像名字:Tag .
 ```
 
+dockerfile
+
+```dockerfile
+FROM 基础镜像
+MAINTAINER 镜像维护者姓名和邮箱
+RUN 容器构建时执行的命令
+EXPOSE 暴露端口
+WORKDIR 容器启动后工作目录
+ENV 环境变量
+ADD 拷贝文件到容器中，若是压缩包，则自动解压
+COPY 拷贝文件到容器中
+VOLUME 容器卷
+CMD 指定一个容器启动时要运行的命令，一个Dockerfile中可以有多个CMD，但只有最后一个生效，CMD会被docker run之后的参数替换掉
+ENTRYPOINT 指定一个容器启动时要运行的命令，追加到docker run命令之后
+ONBUILD 当构建一个被继承的Dockerfile时被触发。
+
+-----
+FROM centos
+ONBUILD echo "father trigger"
+>>> docker build -t father:latest .
+
+FROM father:latest
+>>>docker build -t son:latest .
+<<<father trigger
+
+-----
+FROM openjdk:8-jre
+MAINTAINER Closer <18969946575@163.com>
+ENV APP_VERSION 0.0.1-SNAPSHOT
+RUN mkdir /app
+COPY springboot-$APP_VERSION.jar /app/app.jar
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/app.jar", "--spring.profiles.active=prod"]
+EXPOSE 9090
+```
+
+
+
 Git
+
 ```shell
 yum install -y git
 
