--- a/命令.md
+++ b/命令.md
@@ -196,6 +196,36 @@ ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/app
 EXPOSE 9090
 ```
 
+```she
+docker run -d -p 9000:8080 --name mytomcat  \
+   -v /root/DDockerfile/data/file/:/usr/local/apache-tomcat-8.5.40/webapps/ \
+   -v /root/DDockerfile/data/logs/:/usr/local/apache-tomcat-8.5.40/logs/ \
+   --privileged=true tomcat:my
+   
+   -v (将file下的war包直接投递到webapps中)
+   -v (将tomcat的log传到宿主机)
+   --pri 授予全部权限
+```
+
+```dockerfile
+# 自定tomcat
+FROM centos
+MAINTAINER closer <18969946575@163.com>
+ADD jdk-8u181-linux-x64.tar.gz /usr/local/
+ADD apache-tomcat-8.5.40.tar.gz /usr/local/
+ENV MYPATH /usr/local/
+WORKDIR $MYPATH
+ENV JAVA_HOME /usr/local/jdk1.8.0_181
+ENV CLASSPATH $JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+ENV CATALINA_HOME /usr/local/apache-tomcat-8.5.40
+ENV CATALINA_BASE /usr/local/apache-tomcat-8.5.40
+ENV PATH $PATH:$JAVA_HOME/bin:$CATALINA_HOME/lib:$CATALINA_HOME/bin
+EXPOSE 8080
+CMD /usr/local/apache-tomcat-8.5.40/bin/startup.sh && tail -F /usr/local/apache-tomcat-8.5.40/bin/logs/catalina.out
+```
+
+
+
 
 
 Git
