--- a/安装方法大全.md
+++ b/安装方法大全.md
@@ -80,6 +80,9 @@ echo "export PATH=$PATH:/usr/local/git/bin" >> /etc/bashrc
 source /etc/bashrc
 
 git --version
+
+git config --global user.email "18969946575@163.com"
+git config --global user.password ""
 ```
 
 ## Centos安装mysql 8.0.11
